@@ -47,9 +47,12 @@ Increased independence of anomaly scores across partitions ({pull}182[182])
 Avoid potential false positives at model start up when first detecting new components of the time
 series decomposition. (See {pull}218[218].)
 
-//=== Bug Fixes
+=== Bug Fixes
 
 Fix cause of "Bad density value..." log errors whilst forecasting. ({pull}207[207])
+
+Fix incorrectly missing influencers when the influence field is one of the detector's partitioning
+fields and the bucket is empty. ({pull}219[#219])
 
 //=== Regressions
 
